<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

<<<<<<< HEAD
    <com.wolcano.musicplayer.music.prefs.CusPrefCateg
        android:title="@string/pref_header_other"
=======
    <com.wolcano.musicplayer.music.prefs.CustomPreferenceCategory
        android:title="@string/pref_header_online"
>>>>>>> backup
        >

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreference
            android:key="delete_history"
            android:persistent="false"
            android:summary="@string/pref_summary_change_delete_history"
            android:title="@string/pref_title_delete_history" />
        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="true"
            android:key="remember_last_search"
            android:summary="@string/pref_summary_remember_last_search"
            android:title="@string/pref_title_remember_last_search" />
        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreference
            android:key="backup_history"
            android:persistent="false"
            android:summary="@string/pref_summary_change_backup_history"
            android:title="@string/pref_title_backup_history" />
        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreference
            android:key="import_history"
            android:persistent="false"
            android:title="@string/pref_title_import_history" />
        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreference
            android:key="email_us"
            android:persistent="false"
            android:title="@string/pref_title_email_us"
            />
    </com.wolcano.musicplayer.music.prefs.CusPrefCateg>

</android.support.v7.preference.PreferenceScreen>
