<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.wolcano.musicplayer.music.prefs.CustomPreferenceCategory android:title="@string/pref_header_online">

        <com.wolcano.musicplayer.music.prefs.CustomPreference
            android:key="delete_history"
            android:persistent="false"
            android:summary="@string/pref_summary_change_delete_history"
            android:title="@string/pref_title_delete_history" />

        <com.wolcano.musicplayer.music.prefs.CustomSwitchPreference
            android:defaultValue="true"
            android:key="remember_last_search"
            android:summary="@string/pref_summary_remember_last_search"
            android:title="@string/pref_title_remember_last_search" />

        <com.wolcano.musicplayer.music.prefs.CustomPreference
            android:key="backup_history"
            android:persistent="false"
            android:summary="@string/pref_summary_change_backup_history"
            android:title="@string/pref_title_backup_history" />

        <com.wolcano.musicplayer.music.prefs.CustomPreference
            android:key="import_history"
            android:persistent="false"
            android:title="@string/pref_title_import_history" />

        <com.wolcano.musicplayer.music.prefs.CustomPreference
            android:key="email_us"
            android:persistent="false"
            android:title="@string/pref_title_email_us" />

    </com.wolcano.musicplayer.music.prefs.CustomPreferenceCategory>

</androidx.preference.PreferenceScreen>
