<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/baseline_library_music_black_36"
            android:title="@string/library" />
        <item
            android:id="@+id/nav_recentlyadded"
            android:icon="@drawable/baseline_vertical_align_center_white_36"
            android:title="@string/recentlyadded" />


        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/baseline_queue_music_white_36"
            android:title="@string/playlists" />

    </group>
    <group android:id="@+id/ids">
        <!-- Divider will appear above this item -->
        <item
            android:id="@+id/nav_sleep_timer"
            android:icon="@drawable/baseline_timer_white_36"
            android:title="@string/sleeptimer" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_like"
            android:icon="@drawable/sharp_thumb_up_alt_white_24"
            android:title="@string/rate" />
    </group>


</menu>
