<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.wolcano.musicplayer.music.prefs.CustomPreferenceCategory
        android:title="@string/pref_header_general"
        >
        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="0"
            android:entries="@array/pref_choose_opening_titles1"
            android:entryValues="@array/pref_choose_opening_values1"
            android:key="opening"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_opening" />
        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="0"
            android:entries="@array/pref_choose_sleeptimer_titles"
            android:entryValues="@array/pref_choose_sleeptimer_values"
            android:key="sleeptimerbehav"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_sleeptimer"
            android:summary="@string/pref_summary_sleeptimer"

            />
        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreference
            android:key="howtouse"
            android:persistent="false"
            android:summary="@string/pref_summary_howtouse"
            android:title="@string/pref_title_howtouse" />

    </com.wolcano.musicplayer.music.prefs.CustomPreferenceCategory>

</androidx.preference.PreferenceScreen>
